--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -22,7 +22,7 @@
 
                                     <div id="bottom">
                                         <div>
-                                            <label for="user-details" class="select">Persönlichen angaben</label>
+                                            <label for="user-details" class="select">Persönliche Angaben</label>
                                             <a id="user-details" name="user-details">Eingeloggt als <% if ( user.name ) { %><%= user.name %><% } else { %><%= user.email %><% } %> <em class="edit_details-info">(ändern)</em></a>
                                         </div>
 
