title is not used for zurich problems

--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="problem-header cf">
-                        <h1><%= title %><br>In der Kategorie <%= category %> gemeldet</h1>
+                        <h1>In der Kategorie <%= category %> gemeldet</h1>
                         <p class="sub">
                             <%= created_pp %>
                         </p>
