--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -87,6 +87,19 @@ input[type=submit].button-blue:active,
     margin: 0.3em 0.5em 0.1em 0.5em;
     text-transform: none;
     font-weight: normal;
+    text-shadow: 0px -1px 0 rgba(0, 0, 0, 0.5);
+}
+
+input[type=submit].button-blue,
+.button-grey,
+.button-blue {
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+input[type=submit].button-blue:active,
+.button-grey:active,
+.button-blue:active {
+    box-shadow: none;
 }
 
 #error .button-grey,
@@ -210,6 +223,7 @@ input[type=submit].button-blue,
     margin: 0px;
     border-radius: 2px;
     background-color: rgb(248,248,248);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 #search {
