Conditionally include stylesheets depening on whether we are android 2.2 in order to fix issues with position: fixed elements breaking dropdowns on android 2.2
Now uses position: absolute instead of fixed for body, content and
progress bar

--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -2,7 +2,7 @@
                 <div class="button-prev">Zurück</div>
                 <h1 class="title">Details</h1>
             </header>
-                <div class="content dot-background" role="main">
+                <div class="content dot-background" id="details-page" role="main">
                     <div id="side-form">
                         <fieldset>
                             <div id="problem_form">
