--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -1,6 +1,5 @@
             <header class="bar-title" id="home-header">
                 <!--<h1 class="title">FixMyZ&uuml;rich</h1>-->
-                <img id="swap-map" class="button-swap nodisplay" src="img/luftbild.png">
                 <a class="button-menu"><img src="img/menu.png"></a>
             </header>
                 <div class="content" role="main">
@@ -30,6 +29,7 @@
                             <div id="search">
                                 <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
                             </div>
+                            <div id="swap-map" class="nodisplay">Luftbild</div>
                             <div id="mark-here" class="nodisplay">
                             <a class="button-blue">Eine Meldung erfassen</a>
                             </div>
