--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -47,6 +47,7 @@ h4.static-with-rule {
     font-weight: normal;
     font-size: 1.3em;
     padding: 0.5em 0em 0.5em 1em;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 /* stop scrolling on iphone */
@@ -242,6 +243,7 @@ input[type=submit].button-blue,
     border-color: rgb(201,201,201);
     line-height: 1.4;
     font-size: 16px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 #search #pc {
     width: 80%;
