--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -35,6 +35,10 @@ h4.static-with-rule {
     font-size: 14px;
 }
 
+banner p.fixed {
+    background-color: #648721;
+};
+
 .page-title {
     position: fixed;
     z-index: 2000;
