translate user details and use as nav item on settings screen

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -6,7 +6,7 @@
             <ul class="list">
                 <li>
                     <a id="settings">
-                        Einstellungen
+                        Benutzerdaten
                         <span class="chevron"></span>
                     </a>
                 </li>
