--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
                 <div class="button-prev">Zurück</div>
-                <h1 class="title">User Details</h1>
+                <h1 class="title">Benutzerdaten</h1>
             </header>
                 <div class="content dot-background" role="main">
                     <form action="" method="post" name="userForm" id="userForm" enctype="multipart/form-data">
