--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,7 +6,7 @@
             <ul class="list">
                 <li>
                     <a id="settings">
-                        [% loc('Settings') %]
+                        [% loc('User details') %]
                         <span class="chevron"></span>
                     </a>
                 </li>
