--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -455,6 +455,7 @@ input[type=submit].button-blue,
 .ext-form-content label {
     font-weight: normal;
     margin-top: 0.5em;
+    padding-left: 0.5em;
 }
 
 .ext-form-content select,
@@ -463,6 +464,7 @@ input[type=submit].button-blue,
     max-width: 100%;
     -webkit-border-radius: 10px;
     border-radius: 10px;
+    padding-left: 0.5em;
 }
 
 .ext-form-content #save,
