--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -2,5 +2,82 @@
             <a class="button-prev">Zurück</a>
             <h1 class="title">Hilfe</h1>
         </header>
-        <div class="content" role="main">
+        <div class="content textpage" role="main">
+            <dt>Was ist «Züri wie neu»</dt>
+            <dd>
+            «Züri wie neu» ist eine Online-Plattform, über die die Einwohnerinnen und
+            Einwohner der Stadt Zürich auf Mängel und Schäden der städtischen Infrastruktur
+            hinweisen können. «Züri wie neu» wird von der Stadtverwaltung moderiert und
+            transparent geführt. Die Meldungen werden innerhalb von einem Arbeitstag den zuständigen Fachstellen
+            zugewiesen und innert fünf Arbeitstagen abschliessend beantwortet. Fällt eine
+            Meldung nicht in den Zuständigkeitsbereich der Stadtverwaltung, wird die
+            Meldung anonymisiert der zuständigen dritten Stelle per E-Mail zugestellt.
+            </dd>
+
+            <dt>Welche Probleme kann ich über «Züri wie neu» melden?</dt>
+            <dd>
+            <p>Gemeldet werden können sämtliche Schäden an der Infrastruktur der Stadt Zürich.
+            Dabei kann es sich um ein Loch im Strassenbelag, ein Graffiti am Stadthaus oder
+            eine durch Vandalen beschädigte Parkbank handeln.
+
+            <p>Es können Probleme zu folgenden Kategorien gemeldet werden:
+
+            <ul>
+            <li>Abfall / Sammelstellen</li>
+            <li>Beleuchtung</li>
+            <li>Graffiti</li>
+            <li>Spielplatz / Sitzbank</li>
+            <li>Strasse / Trottoir / Platz</li>
+            <li>Tiere / Grünflächen</li>
+            </ul>
+
+            </dd>
+
+            <dt>Was kann ich nicht über «Züri wie neu» melden?</dt>
+            <dd>
+            <ul>
+            <li>Mängel die nicht auf Stadtgebiet liegen.</li>
+            <li>Melden Sie «Züri wie neu» KEINE Notfälle. Die Notrufnummern lauten:
+              <br>Medizinisch - 144 Polizei - 117 Feuer - 118 Allgemein - 112</li>
+            <li>Allgemeine Verschönerungs- und Verbesserungsvorschläge</li>
+            </ul>
+            </dd>
+
+            <dt>Wie verwende ich die Webseite?</dt>
+            <dd>
+            <p>
+            Geben Sie zuerst eine Adresse an oder lassen Sie Ihren Standort automatisch
+            über den entsprechenden Link lokalisieren. Mittels Mausklick in die danach
+            angezeigte Karte können Sie den exakten Ort des Mangels angeben. Als letzten
+            Schritt füllen Sie die Felder des Formulars aus und schicken die Meldung ab.
+            </p>
+            <p>
+            Weiter können Sie bestehende Meldungen sowie auch die Rückmeldungen der
+            Verwaltung betrachten.
+            </p>
+            </dd>
+
+            <dt>Wie werden die Probleme gelöst?</dt>
+            <dd>
+            Die Meldungen werden innerhalb von einem Arbeitstag den zuständigen Fachstellen
+            zugewiesen und innert fünf Arbeitstagen von den dafür zuständigen
+            Fachstellen bearbeitet sowie mit einer entsprechenden Rückmeldung versehen.
+            </dd>
+
+            <dt>Kann ich «Züri wie neu» auf meinem Smartphone nutzen?</dt>
+            <dd>
+            Ja, sowohl über die für mobile Geräte optimierte Webseite, als auch über die
+            iOS- und Android-App.
+            </dd>
+
+            <dt>Kann ich auch Probleme ausserhalb von Zürich melden?</dt>
+            <dd>Nein.</dd>
+
+            <dt>Werden meine E-Mail-Adresse, mein Name und meine Telefonnummer vertraulich behandelt?</dt>
+            <dd>
+            Die Kontaktinformationen werden nur stadtintern für Rückfragen verwendet. Sie
+            werden weder im Internet publiziert noch an Dritte weitergegeben.
+            </dd>
+
+            </dl>
         </div>
