shuffle styles from ratchet into android 2.2 and non android 2.2 specific style files in order to fix erratic dropdown behaviour.
The main culprit seems to be the translateZ transform but I don't think
the others are helping either.

--- a/www/css/android-2.2.css
+++ b/www/css/android-2.2.css
@@ -1,10 +1,24 @@
-.content {
+div.content {
     position: absolute !important;
-    top: 34px;
+    top: 44px;
     right: 0;
-    bottom: 0;
+    bottom: 30px;
     left: 0;
     margin-top: 0px;
+}
+
+#around-content {
+    bottom: 0px;
+}
+
+[class*="bar-"] {
+  position: absolute !important;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  height: 44px;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .bar-tab {
