--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -2,7 +2,7 @@
                 <!--<h1 class="title">FixMyZ&uuml;rich</h1>-->
                 <a class="button-menu"><img src="img/menu.png"></a>
             </header>
-                <div class="content" role="main">
+                <div class="content" role="main" id="around-content">
                     <h1 class="page-title">
                         Züri wie neu
                     </h1>
