no gradient on GPS relocate button as it looks ugly

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -150,6 +150,11 @@ a:visited:active.button-blue {
     color: white;
 }
 
+.button-grey-plain {
+    background-color: #a9a9a9;
+    background-image: none;
+}
+
 input[type=submit].button-blue,
 .button-blue {
     background-color: #315db7;
