--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -158,7 +158,7 @@ a:visited:active.button-blue {
 input[type=submit].button-blue,
 .button-blue {
     background-color: #315db7;
-    background-image: -webkit-linear-gradient(90deg, #416CC7, #315db7);
+    background-image: -webkit-linear-gradient(90deg, #315db7, #416CC7);
     color: white;
 }
 
