remove underlines on various buttons and links

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,5 +1,5 @@
         <header class="bar-title">
-            <a class="button-prev">[% loc('Home') %]</a>
+            <div class="button-prev">[% loc('Home') %]</div>
             <h1 class="title">[% loc('Settings') %]</h1>
         </header>
         <div class="content dot-background" role="main">
