--- a/www/templates/privacy.html
+++ b/www/templates/privacy.html
@@ -1,5 +1,5 @@
         <header class="bar-title">
-            <a class="button-prev">Zurück</a>
+            <div class="button-prev">Zurück</div>
             <h1 class="title">Disclaimer</h1>
         </header>
         <div class="content textpage" role="main">
