--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,5 +1,5 @@
         <header class="bar-title">
-            <a class="button-prev">Start</a>
+            <div class="button-prev">Start</div>
             <h1 class="title">Einstellungen</h1>
         </header>
         <div class="content dot-background" role="main">
