--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,5 +1,5 @@
         <header class="bar-title">
-            <a class="button-prev">[% loc('Back') %]</a>
+            <div class="button-prev">[% loc('Back') %]</div>
             <h1 class="title">[% loc('Privacy Policy') %]</h1>
         </header>
         <div class="content textpage" role="main">
