small translation tweak

--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -3,7 +3,7 @@
         </header>
         <div class="content dot-background" role="main">
             <div class="ext-form-content">
-                <h3>Fast Fertig! Bitte checken Sie ihre Mailbox...</h3>
+                <h3>Fast Fertig! Bitte checken Sie Ihre Mailbox...</h3>
 
                 <p>
                 Falls Sie kein E-Mail erhalten, überprüfen Sie bitte Ihren Spam-Ordner.
