--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -23,7 +23,7 @@
                                         <input type="text" name="form-name" id="form-name">
                                     </div>
                                     <div>
-                                        <label for="form-phone">Telefonnummer (optional)</label>
+                                        <label for="form-phone">Telefonnummer</label>
                                         <input type="tel" phone="form-phone" id="form-phone">
                                     </div>
 
