--- a/templates/user.html
+++ b/templates/user.html
@@ -17,7 +17,7 @@
                                         <input type="text" name="form-name" id="form-name" value="<%= name %>">
                                     </div>
                                     <div>
-                                        <label for="form-phone">[% loc('Phone number (optional)') %]</label>
+                                        <label for="form-phone">[% loc('Phone number') %]</label>
                                         <input type="tel" phone="form-phone" id="form-phone" value="<%= phone %>">
                                     </div>
 
