Re-generate www/templates/* files

--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -17,7 +17,7 @@
                                         <input type="text" name="form-name" id="form-name" value="<%= name %>">
                                     </div>
                                     <div>
-                                        <label for="form-phone">Telefonnummer (optional)</label>
+                                        <label for="form-phone">Telefonnummer</label>
                                         <input type="tel" phone="form-phone" id="form-phone" value="<%= phone %>">
                                     </div>
 
