Make satellite map view the default
This commit also takes the opportunity to slightly refactor the map layer
setup/swapping code.

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -29,7 +29,7 @@
                             <div id="search">
                                 <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
                             </div>
-                            <div id="swap-map" class="nodisplay">Luftbild</div>
+                            <div id="swap-map" class="nodisplay">Stadtplan</div>
                             <div id="mark-here" class="nodisplay">
                             <a class="button-blue">Eine Meldung erfassen</a>
                             </div>
