--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -549,11 +549,24 @@ input[type=submit].button-blue,
 }
 
 .ext-photo-preview {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    margin: auto;
-    max-height: 60%;
-    max-width: 100%;
+    padding-top: 0;
+    margin: 4px auto auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+}
+
+.ext-photo-preview.photo-size-1 {
+    height: 275px;
+}
+
+.ext-photo-preview.photo-size-2 {
+    height: 140px;
+}
+
+.ext-photo-preview.photo-size-3 {
+    height: 120px;
 }
 
 #ajaxOverlay, #errorOverlay {
